Update delete api method
