# docs/swagger.yml
@@ -72,6 +72,27 @@ paths:
           description: IDが設定されていない Bad Request
         "500":
           description: システムエラー Internal Server Error
+    delete:
+      tags:
+        - inspection sheets
+      summary: Deletes the InspectionSheet model.
+      description: ""
+      parameters:
+        - name: sheet_id
+          in: path
+          description: inspection sheet ID to delete
+          required: true
+          schema:
+            type: integer
+      responses:
+        "204":
+          description: No Content
+        "400":
+          description: "Invalid ID supplied"
+        "404":
+          description: "Not found"
+        "500":
+          description: "Internal Server Error"
   /inspection-groups:
     get:
       tags:
